--- a/src/main/resources/templates/error/access-denied.html
+++ b/src/main/resources/templates/error/access-denied.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/html" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Список продуктов</title>
+    <title>Продукт</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -11,16 +11,11 @@
 </head>
 <body>
 
-
-<div th:replace="~{navbar :: navi(ProductList)}"></div>
+<div th:replace="~{navbar :: navi(ProductForm)}"></div>
 
 <div class="container">
-    <h2>В корзину можно добавлять товары только авторизованным пользователям.</h2>
-    <br>
-    <a type="button" th:href="@{/login}" class="btn btn-success">Перейти на страницу авторизации.</a>
-    <br>
-    <br>
-    <a type="button" class="btn btn-warning">Зарегистрироваться</a>
+
+    <h1>Доступ запрещен!</h1>
 </div>
 <div th:replace="~{footer :: footerBlock}"/>
 
