--- a/src/main/resources/templates/product/product-list.html
+++ b/src/main/resources/templates/product/product-list.html
@@ -11,7 +11,6 @@
 </head>
 <body>
 
-
 <div th:replace="~{common/navbar :: navi(ProductList)}"></div>
 
 <div class="container">
@@ -24,8 +23,8 @@
                 <th colspan="2" scope="col">Наименование</th>
                 <th scope="col">Цена</th>
                 <th scope="col" sec:authorize="hasAuthority('product.update')">Редактировать</th>
-                <th scope="col" sec:authorize="hasAuthority('product.delete')">Удалить</th>
                 <th scope="col" sec:authorize="hasAuthority('product.read') || isAnonymous()">Просмотреть</th>
+                <th scope="col" sec:authorize="hasAuthority('product.delete')">Удалить</th>
                 <th scope="col" sec:authorize="hasAuthority('product.read') || isAnonymous()">Добавить в корзину</th>
             </tr>
             </thead>
@@ -56,7 +55,7 @@
                 </td>
                 <td sec:authorize="hasAuthority('product.read') || isAnonymous()">
                     <a type="button"
-                       th:href="@{${'/cart/add/' + product.id}}" class="btn btn-danger">+</a>
+                       th:href="@{${'/cart/add/' + product.id}}" class="btn btn-success">+</a>
                     <!--                    <a type="button" th:href="@{/product/delete(id=${product.id})}" class="btn btn-danger">Удалить</a>-->
                 </td>
             </tr>
@@ -66,7 +65,6 @@
 
 </div>
 <div th:replace="~{common/footer :: footerBlock}"/>
-
 
 </body>
 </html>
