--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -30,6 +30,12 @@
           <a class="nav-link" th:classappend="${activeTab == 'Cart' ? 'active' : ''}" th:href="@{/cart}"
              th:text="'Корзина(' + ${session.cart == null ? '0)' : session.cart.totalQuantity + ')'}"></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" th:classappend="${activeTab == 'Order' ? 'active' : ''}" th:href="@{/order}"
+             th:text="'Заказ(' + ${session.cart == null ? '0)' : session.cart.totalPrice + ' руб.)'}"></a>-->
+<!--             th:text="'Заказ(' + ${order.price + ')'}"></a>-->
+<!--          // not sure session.order-->
+        </li>
         <li sec:authorize="isAuthenticated()" class="nav-item">
           <form th:action="@{/logout}" method="post">
             <input type="submit" class="btn btn-danger" value="Выйти"/>
