--- a/src/main/resources/templates/cart/cart-page.html
+++ b/src/main/resources/templates/cart/cart-page.html
@@ -2,12 +2,21 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/html" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Список продуктов</title>
+    <title>Cart</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"-->
+<!--            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+
 </head>
 <body>
 
@@ -44,11 +53,37 @@
                 </td>
 
             </tr>
+            <tr>
+                <td colspan="4"></td>
+                <td>Итого заказ:</td>
+                <td th:text="${cart.totalPrice}"></td>
+            </tr>
             </tbody>
         </table>
-        <a type="button" class="btn btn-primary" th:href="@{/order/fill}">Продолжить оформление заказа</a>
+<!--        <a type="button" class="btn btn-primary" th:href="@{/order/fill}">Продолжить оформление заказа</a>-->
+        <a sec:authorize="isAuthenticated()" type="button" class="btn btn-primary" th:href="@{/order/fill}">Продолжить оформление заказа</a>
+        <a sec:authorize="isAnonymous()" data-toggle="modal" data-target="#authWarningModal" type="button" class="btn btn-primary" th:href="@{/order/fill}">Продолжить оформление заказа</a>
     </div>
 
+</div>
+<!-- Modal -->
+<div class="modal fade" id="authWarningModal" tabindex="-1" role="dialog" aria-labelledby="authWarningModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="authWarningModalLabel">Предупреждение</h5>
+                <!--                <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+                <!--                    <span aria-hidden="true">&times;</span>-->
+                <!--                </button>-->
+            </div>
+            <div class="modal-body">
+                <span>Для формирования заказа вам необходимо зайти в свою учетную запись</span>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Хорошо</button>
+            </div>
+        </div>
+    </div>
 </div>
 <div th:replace="~{common/footer :: footerBlock}"/>
 
