--- a/src/main/resources/templates/product/product-list.html
+++ b/src/main/resources/templates/product/product-list.html
@@ -24,8 +24,8 @@
                 <th colspan="2" scope="col">Наименование</th>
                 <th scope="col">Цена</th>
                 <th scope="col" sec:authorize="hasAuthority('product.update')">Редактировать</th>
-                <th scope="col" sec:authorize="hasAuthority('product.delete')">Удалить</th>
                 <th scope="col" sec:authorize="hasAuthority('product.read') || isAnonymous()">Просмотреть</th>
+                <th scope="col" sec:authorize="hasAuthority('product.delete')">Удалить</th>
                 <th scope="col" sec:authorize="hasAuthority('product.read') || isAnonymous()">Добавить в корзину</th>
             </tr>
             </thead>
@@ -37,7 +37,7 @@
                 <th scope="row" th:text="${i.count}"></th>
                 <td>
                     <div>
-                        <img th:src="@{'/product/images/' + ${product.id}}" alt="" width="50px" height="50" />
+                        <img th:src="@{'/product/image/' + ${product.id}}" alt="" width="50px" height="50" />
                     </div>
                 </td>
                 <td th:text="${product.title}"></td>
