--- a/src/main/resources/templates/product/product-form.html
+++ b/src/main/resources/templates/product/product-form.html
@@ -14,7 +14,8 @@
 <div th:replace="~{common/navbar :: navi(ProductForm)}"></div>
 
 <div class="container">
-    <form class="row g-3 needs-validation" th:object="${product}" th:action="@{/product}" method="post" enctype="multipart/form-data">
+    <form class="row g-3 needs-validation" th:object="${product}" th:action="@{/product}" method="post"
+          enctype="multipart/form-data">
         <input type="hidden" th:field="*{id}">
         <div class="col-md-8">
             <div class="input-group mb-3">
@@ -31,6 +32,7 @@
             </div>
         </div>
         <div class="col-md-8">
+<!--            <span class="input-group-text" id="cost">Статус</span>-->
             <select class="form-select" aria-label="Default select example" th:field="*{status}">
                 <option th:each="statusValue : ${T(ru.gb.gbapimay.common.enums.Status).values()}"
                         th:value="${statusValue.name()}"
@@ -54,7 +56,6 @@
                         th:value="${category.id}"
                         th:text="${category.title}"></option>
             </select>
-
         </div>
 
         <div class="col-md-8">
@@ -63,10 +64,22 @@
                 <input type="file" name="file" class="form-control-file" accept="image/*">
             </div>
         </div>
-
         <div class="col-12">
             <button class="btn btn-primary" type="submit">Сохранить</button>
         </div>
+        <form method="post" enctype="multipart/form-data" th:action="@{/product/upload}">
+        <div class="col-md-8">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="images">Изображения</span>
+                <input type="hidden" th:field="${product.id}">
+                <input type="file" name="files" multiple class="form-control-file"> <br/><br/>
+            </div>
+        </div>
+            <div class="col-12">
+            <button class="btn btn-primary" type="submit">Сохранить</button>
+            </div>
+        </form>
+
     </form>
 
 </div>
