--- a/src/main/resources/templates/product/product-form.html
+++ b/src/main/resources/templates/product/product-form.html
@@ -67,7 +67,7 @@
         <div class="col-12">
             <button class="btn btn-primary" type="submit">Сохранить</button>
         </div>
-        <form method="post" enctype="multipart/form-data" th:action="@{/product/upload}">
+<!--        <form method="post" enctype="multipart/form-data" th:action="@{/product/upload}">-->
         <div class="col-md-8">
             <div class="input-group mb-3">
                 <span class="input-group-text" id="images">Изображения</span>
