--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -21,14 +21,24 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" th:classappend="${activeTab == 'ProductList' ? 'active' : ''}" aria-current="page" th:href="@{/product/all}">Список продуктов</a>
+                    <a class="nav-link" th:classappend="${activeTab == 'ProductList' ? 'active' : ''}"
+                       aria-current="page" th:href="@{/product/all}">Список продуктов</a>
                 </li>
                 <li sec:authorize="hasAuthority('product.create')" class="nav-item">
-                    <a class="nav-link" th:classappend="${activeTab == 'ProductForm' ? 'active' : ''}" th:href="@{/product}">Добавить продукт</a>
+                    <a class="nav-link" th:classappend="${activeTab == 'ProductForm' ? 'active' : ''}"
+                       th:href="@{/product}">Добавить продукт</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:classappend="${activeTab == 'Review' ? 'active' : ''}" th:href="@{/review}">Добавить
+                        отзыв</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:classappend="${activeTab == 'Cart' ? 'active' : ''}" th:href="@{/cart}"
                        th:text="'Корзина(' + ${session.cart == null ? '0)' : session.cart.totalQuantity + ')'}"></a>
+                </li>
+                <li sec:authorize="hasAuthority('product.create')" class="nav-item">
+                    <a class="nav-link" th:classappend="${activeTab == 'OrderList' ? 'active' : ''}"
+                       th:href="@{/order}">Страница заказов</a>
                 </li>
                 <li sec:authorize="isAuthenticated()" class="nav-item">
                     <form th:action="@{/logout}" method="post">
