--- a/src/main/resources/templates/order/order-form.html
+++ b/src/main/resources/templates/order/order-form.html
@@ -23,7 +23,7 @@
 <div class="container">
     <br>
     <h1>Заказ</h1>
-    <span th:if="${cart.items.size() == 0}">Корзина пуста</span>
+    <span th:if="${cart.items.size() == 0}">Заказ пуст</span>
     <div th:unless="${cart.items.size() == 0}">
         <!--        <span th:text="${cart.items.size()}"></span>-->
         <table class="table">
@@ -44,7 +44,6 @@
                 <td th:text="${cartItem.itemPrice}"></td>
                 <td th:text="${cartItem.quantity}"></td>
                 <td th:text="${cartItem.totalPrice}"></td>
-
             </tr>
             <tr>
                 <td colspan="3"></td>
@@ -53,31 +52,59 @@
             </tr>
             </tbody>
         </table>
-        <a sec:authorize="isAuthenticated()" type="button" class="btn btn-primary" th:href="@{/order/fill}">Продолжить оформление заказа</a>
-        <a sec:authorize="isAnonymous()" data-toggle="modal" data-target="#authWarningModal" type="button" class="btn btn-primary" th:href="@{/order/fill}">Продолжить оформление заказа</a>
+
+        <h3>Данные для оформления заказа</h3>
+        <form class="row g-3 needs-validation" th:object="${orderDto}" th:action="@{/order/create}" method="post">
+            <div class="col-md-8">
+                <span class="input-group-text" id="recipientFirstname">Имя</span>
+                <input type="text" class="form-control" aria-label="Sizing example input"
+                       aria-describedby="inputGroup-sizing-default" th:field="*{recipientFirstname}">
+            </div>
+
+            <div class="col-md-8">
+                <span class="input-group-text" id="recipientLastname">Фамилия</span>
+                <input type="text" class="form-control" aria-label="Sizing example input"
+                       aria-describedby="inputGroup-sizing-default" th:field="*{recipientLastname}">
+            </div>
+
+            <div class="col-md-8">
+                <span class="input-group-text" id="recipientPhone">Телефон</span>
+                <input type="text" class="form-control" aria-label="Sizing example input"
+                       aria-describedby="inputGroup-sizing-default" th:field="*{recipientPhone}">
+            </div>
+            <div class="col-md-8">
+                <span class="input-group-text" id="recipientMail">Электронная почта</span>
+                <input type="text" class="form-control" aria-label="Sizing example input"
+                       aria-describedby="inputGroup-sizing-default" th:field="*{recipientMail}">
+            </div>
+            <div></div>
+            <div class="col-12">
+                <button class="btn btn-primary" type="submit">Сформировать заказа</button>
+            </div>
+        </form>
     </div>
-
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="authWarningModal" tabindex="-1" role="dialog" aria-labelledby="authWarningModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="authWarningModalLabel">Предупреждение</h5>
-                <!--                <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
-                <!--                    <span aria-hidden="true">&times;</span>-->
-                <!--                </button>-->
-            </div>
-            <div class="modal-body">
-                <span>Для формирования заказа вам необходимо зайти в свою учетную запись</span>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Хорошо</button>
+    <!-- Modal -->
+    <div class="modal fade" id="authWarningModal" tabindex="-1" role="dialog" aria-labelledby="authWarningModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="authWarningModalLabel">Предупреждение</h5>
+                    <!--                <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+                    <!--                    <span aria-hidden="true">&times;</span>-->
+                    <!--                </button>-->
+                </div>
+                <div class="modal-body">
+                    <span>Для формирования заказа вам необходимо зайти в свою учетную запись</span>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Хорошо</button>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
 
 <div th:replace="~{common/footer :: footerBlock}"/>
 
